--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@mantine/form": "^7.15.1",
     "@mantine/hooks": "^7.15.1",
     "@reduxjs/toolkit": "^2.5.0",
+    "@tabler/icons-react": "^3.26.0",
     "@tauri-apps/api": "^2",
     "@tauri-apps/plugin-opener": "^2",
     "postcss-cli": "^11.0.0",
@@ -31,7 +32,7 @@
     "postcss": "^8.4.49",
     "postcss-preset-mantine": "^1.17.0",
     "postcss-simple-vars": "^7.0.1",
-    "tailwindcss": "^3.4.16",
+    "tailwindcss": "^3.4.17",
     "typescript": "~5.6.2",
     "vite": "^6.0.3"
   }
