--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -24,4 +24,4 @@ serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 sqlx = { version = "0.8.2", features = ["sqlite", "runtime-tokio"] }
 futures = "0.3.31"
-
+chrono = { version = "0.4.22", features = ["serde"] }
