--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "postcss-cli": "^11.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-github-contribution-calendar": "^2.2.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.1.1"
   },
